# A1-Prime

./: CMakeLists.txt  main.cpp  prime.cpp  prime.hpp  tests.cpp
